Collada export crash with armature #34427

Closed
opened 2013-02-25 13:24:58 +01:00 by Roy Curtis · 4 comments

%%%--- Operating System, Graphics card ---

Windows 8, x64
ATI Mobility Radeon HD 3650
Pentium Dual-Core #2400 (2 cores, 2GHZ)
4GB RAM

- Blender version with error, and version that worked ---

2.66.0 (r54697) (both 32 and 64x builds)
no known working previous version

- Short description of error ---

Trying to export the "Avatar" mesh in the attached blend file as DAE results in crash, even with all options (such as "Include Armatures") are unchecked.
However, removing the "Armature" modifier prevents the crash.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. In object mode, select "Avatar" model
  2. File > Export > Collada (.dae)
  3. Set any variety of export settings (e.g. "Second Life Rigged" preset or "Selection only")
  4. Click "Export COLLADA", observe crash
    %%%
%%%--- Operating System, Graphics card --- Windows 8, x64 ATI Mobility Radeon HD 3650 Pentium Dual-Core #2400 (2 cores, 2GHZ) 4GB RAM - Blender version with error, and version that worked --- 2.66.0 (r54697) (both 32 and 64x builds) no known working previous version - Short description of error --- Trying to export the "Avatar" mesh in the attached blend file as DAE results in crash, even with all options (such as "Include Armatures") are unchecked. However, removing the "Armature" modifier prevents the crash. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. In object mode, select "Avatar" model 2. File > Export > Collada (.dae) 3. Set any variety of export settings (e.g. "Second Life Rigged" preset or "Selection only") 4. Click "Export COLLADA", observe crash %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Your mesh contains vertex weights wich point to not existing vertex groups.
This is an inconsistency in the blender data and i do not know how that can happen.
However the Exporter was not prepared for this situation.

I added an extra consistency check although i believe this problem
should better be fixed in the vertex group functions.

Exporter fix: Committed revision 54856%%%

%%%Your mesh contains vertex weights wich point to not existing vertex groups. This is an inconsistency in the blender data and i do not know how that can happen. However the Exporter was not prepared for this situation. I added an extra consistency check although i believe this problem should better be fixed in the vertex group functions. Exporter fix: Committed revision 54856%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34427
No description provided.