fix: #34427: Collada export crash with armature